[package]
name = "dynamic-arena"
version = "0.1.5"
authors = ["Techcable <Techcable@techcable.net>"]
description = "Dynamically typed arenas, supporting any `Sized` type."
license = "MIT"
documentation = "https://docs.rs/dynamic-arena"
repository = "https://github.com/Techcable/rust-dynamic-arena"
edition = "2018"

[dependencies]
bumpalo = "3"

[dev-dependencies]
trybuild = "1"